# shrub-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/models/: builtin.rs  commands.rs  mod.rs  params.rs  project.rs  task.rs  task_group.rs  variant.rs
