[package]
name = "shrub-rs"
description = "Library for working with Evergreen Project configurations."
version = "0.3.8"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple-error = "0.2"
yaml-merge-keys = "0.4"
yaml-rust = "0.4"
